exports[`meetupFormReducer add_meetup 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 16:04",
  "loading": true,
  "location": "",
  "name": "",
  "start": "2017-02-21 15:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 14:04",
  "voteStart": "2017-02-21 13:34",
}
`;

exports[`meetupFormReducer add_meetup_success 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 16:04",
  "location": "",
  "name": "",
  "start": "2017-02-21 15:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 14:04",
  "voteStart": "2017-02-21 13:34",
}
`;

exports[`meetupFormReducer edit_meetup 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 16:04",
  "loading": true,
  "location": "",
  "name": "",
  "start": "2017-02-21 15:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 14:04",
  "voteStart": "2017-02-21 13:34",
}
`;

exports[`meetupFormReducer edit_meetup_success 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 16:04",
  "location": "",
  "name": "",
  "start": "2017-02-21 15:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 14:04",
  "voteStart": "2017-02-21 13:34",
}
`;

exports[`meetupFormReducer meetupChange 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 16:04",
  "location": "",
  "name": "",
  "start": "2017-02-21 15:04",
  "state": "Pennsylvania",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 14:04",
  "voteStart": "2017-02-21 13:34",
}
`;

exports[`meetupFormReducer resetMeetup 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 16:04",
  "location": "",
  "name": "",
  "start": "2017-02-21 15:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 14:04",
  "voteStart": "2017-02-21 13:34",
}
`;

exports[`meetupFormReducer set_vote 1`] = `
Object {
  "venues": Object {
    "123": Object {
      "name": "test",
      "vote": 0,
      "votes": 2,
    },
    "venue": Object {
      "name": "test",
      "vote": 0,
      "votes": 2,
    },
  },
}
`;

exports[`meetupFormReducer setCurrentMeetup 1`] = `
Object {
  "description": "test",
  "end": "2017-02-21 16:04",
  "location": "",
  "name": "test",
  "start": "2017-02-21 15:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 14:04",
  "voteStart": "2017-02-21 13:34",
}
`;

exports[`meetupFormReducer undefined 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 16:04",
  "location": "",
  "name": "",
  "start": "2017-02-21 15:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 14:04",
  "voteStart": "2017-02-21 13:34",
}
`;
